--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hiepxanh/partytown-example#readme",
   "dependencies": {
+    "cros": "^1.0.1",
     "express": "^4.18.1"
   }
 }
