--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/hiepxanh/partytown-example#readme",
   "dependencies": {
-    "cros": "^1.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1"
   }
 }
